# f90wrap

./: .gitignore  BASELINE_ASSESSMENT.md  BENCHMARK_EVIDENCE.md  CHANGELOG.md  COMPREHENSIVE_VALIDATION_RESULTS.md  DIRECT_C_FIX_PLAN.md  DIRECT_C_REVIEW_AND_REVERSION_PLAN.md  DIRECT_C_VALIDATION_ANALYSIS.md  EVIDENCE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LINKING_AND_STRING_FIX_REPORT.md  MINIMAL_CHANGE_SUMMARY.md  MULTIFILE_INFRASTRUCTURE.md  OLD_VS_NEW_COMPARISON.md  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PLAN.md  PLAN_DIRECT_C_GENERATION.md  README.md  REVIEW_COMPLETE.md  TEST_COVERAGE_SUMMARY.md  TODO.md  VALIDATION_SUMMARY.md  WRAPPER_TERMINATION_FIX.md  all_examples_direct_c_report.json  all_examples_direct_c_summary.json  benchmark_build_times.py  benchmark_report.json  bug_fix_evidence_report.md  direct_c_coverage.json  direct_c_coverage.md  direct_c_validation_report.json  example_test_results.txt  getter_setter_implementation_evidence.md  multifile_infrastructure_report.json  test_all_examples_direct_c.py  test_c_failures.sh  test_direct_c_compatibility.py  (+4 more)
.github/workflows/: python-package.yml
direct_c_test_results/: compatibility_report.md  compatibility_report_v3.md  compatibility_results.json  dependency_fix_summary.md  fortran_failures.md
docs/: fortran_oo_parity.md
examples/: CMakeLists.txt  Makefile  make.inc  make.meson.inc
examples/arrayderivedtypes/: .gitignore  _arrayderivedtype.c  arrayderivedtype.py  meson.build  tests.py
examples/arrays/: .gitignore  ExampleArray.py  Makefile  _ExampleArray_pkg.c  _ExampleArray_relative.c  meson.build  test_direct_c.py
examples/arrays_fixed/: .gitignore  ExampleArray.py  _ExampleArray.c  _ExampleArray_pkg.c  meson.build
examples/arrays_in_derived_types_issue50/: .gitignore  _issue50.c  issue50.py  meson.build  tests.py
examples/auto_raise_error/: _pywrapper.c  _pywrappermodule.c  meson.build  pywrapper.py
examples/callback_print_function_issue93/: CBF.py  _CBF.c  _CBF_pkg.c  meson.build
examples/class_names/: .gitignore  _classnames.c  classnames.py  meson.build
examples/cylinder/: .gitignore  DNAD_processed.f90  Example.py  _Example.c  cyldnad.py  cyldnad_processed.f90  cyldnad_support.f90  meson.build  test_dbl_ad.f90
examples/default_i8/: _testmodule.c  meson.build
examples/derived-type-aliases/: _dta_directmodule.c  _mytype.c  _othertype.c  dta_direct.py  dta_direct_support.f90  dtypes.py  dtypes_support.f90  meson.build  mytype.py  othertype.py
examples/derivedtypes/: .gitignore  ExampleDerivedTypes.py  _ExampleDerivedTypes.c  _ExampleDerivedTypes_pkg.c  (+1 more)
examples/example2/: .gitignore  _mockdt.c  _mockdtpkg.c  meson.build  mockdt.py
examples/example2/f90wrap/: mockdt.py
examples/example2/mockdtpkg/: __init__.py  constant_parameters.py  defineallproperties.py  gaussian.py  precision.py
examples/keyword_renaming_issue160/: .gitignore  _keywordr_rename.c  _keywordr_renamemodule.c  keywordr_rename.py  meson.build
examples/relative_import/: Makefile.meson  _pywrapper.c  _pywrappermodule.c  meson.build
examples/relative_import/top_module/pywrapper/: __init__.py  m_base_type.py  m_composition.py  m_fortran_module.py  m_inheritance.py
f90wrap/: build.py  capsule_helpers.py  cerror.py  cwrapgen.py  directc.py  directc_cgen.py  f90wrapgen.py  fortran.py  meson.build  numpy_capi.py  numpy_utils.py  parser.py  pywrapgen.py  runtime.py  safe_executor.py  setuptools_ext.py  sizeoffortran.f90  transform.py
test/: README_direct_c_fixture.md  direct_c_fixture.py  example_direct_c_usage.py  test_abstract_type_support.py  test_callbacks.py  test_capsule_utilities.py  test_code_reduction.py  test_comprehensive_scenarios.py  test_cwrapgen.py  test_derived_type_lifecycle.py  test_direct_c_build.py  test_directc.py  test_end_to_end_fortran_support.py  test_extended_scenarios.py  test_fortran_support_generation.py  test_fortran_support_integration.py  test_integration_scenarios.py  test_optional_args.py  test_optional_comprehensive.py  test_safe_executor.py  test_setuptools_integration.py  test_wrapper_syntax.py
(+203 files in other folders)
